完成初步测试